Rough fix for locations on mobile

--- a/src/components/RenderRouter/HeroItem.scss
+++ b/src/components/RenderRouter/HeroItem.scss
@@ -1,4 +1,11 @@
 @media (min-width: 768px) {
+     .partialNoFooter {
+        position: relative;
+        left: 20vw;
+        width: 80vw;
+        height: 38vw;
+        padding-bottom: 0vh;
+    }
 
     .heroImage {
         width: 100vw;
@@ -30,7 +37,8 @@
         background-image: linear-gradient(135deg, rgba(255, 255, 255, 1) 5%, rgba(255, 255, 255, 0) 66%);
 
     }
-    .heroBlackBox{
+
+    .heroBlackBox {
         position: absolute;
         background-color: #000000aa;
         padding: 2vw;
@@ -42,7 +50,13 @@
 }
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-
+     .partialNoFooter {
+        position: relative;
+        left: 20vw;
+        width: 80vw;
+        height: 38vw;
+        padding-bottom: 0vh;
+    }
     .heroImage {
         width: 100vw;
         height: 100vh;
@@ -73,7 +87,8 @@
         background-image: linear-gradient(135deg, rgba(255, 255, 255, 1) 5%, rgba(255, 255, 255, 0) 66%);
 
     }
-    .heroBlackBox{
+
+    .heroBlackBox {
         position: absolute;
         background-color: #000000aa;
         padding: 2vw;
@@ -85,6 +100,20 @@
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
+    .partialNoFooterImage{
+         width: 100vw;
+        height: 80vw;
+        z-index: 50;
+         object-fit:cover;
+        position: absolute;
+    }
+    .partialNoFooter {
+        position: relative;
+        left: 0vw;
+        width: 100vw;
+        height: 78vw;
+        padding-bottom: 0vh;
+    }
     .heroImage {
         width: 100vw;
         height: 94vh;
@@ -100,10 +129,12 @@
         //background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, #fff 100%);
 
     }
+
     .heroImageGradient {
         visibility: hidden;
     }
-    .heroBlackBox{
+
+    .heroBlackBox {
         position: absolute;
         background-color: #000000aa;
         padding: 2vw;
